--- a/HiveManagement/templates/hive_management/overview.html
+++ b/HiveManagement/templates/hive_management/overview.html
@@ -6,7 +6,7 @@
     <table border=2>
             <th colspan = 2></th>
         {% for head in table_head %}
-            <th colspan = 3>{{head}}</th>
+            <th colspan = 4>{{head}}</th>
         {% endfor %}
         {% for work_log_row in table_work_log %}
             <tr>
@@ -18,6 +18,7 @@
                     <td>{{task.hives_alive}}</td>
                     <td>{{task.date_work|date:"m/d/y"}}</td>
                     <td>{{task.team.name}}</td>
+                    <td>{{task.survival_from_date}}</td>
                 {% endfor %}
             </tr>
         {% endfor %}
